apps/dev/payment-app/networkpolicies/allow-app-to-mongo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mongo
  namespace: payment-app
spec:
  podSelector:
    matchLabels:
      app: payment-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: payment-mongo
      ports:
        - protocol: TCP
          port: 27017
