apps/dev/payment-app/networkpolicies/allow-mongo-from-app.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-from-app
  namespace: payment-app
spec:
  podSelector:
    matchLabels:
      app: payment-mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-app
      ports:
        - protocol: TCP
          port: 27017
